# Hertzsprung-Russell

./: CMakeLists.txt  README.md  Readme.md
data/: athyg_24_reduced_m11.csv  hygdata_v41.csv
include/: parse_consume.hpp  star.hpp
src/: hr.cpp  parse_consume.cpp  star.cpp
